Add InverseRNA evaluator